<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.gas.humblr.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_subredditFragment"
            app:destination="@id/navigation_subreddit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ru.gas.humblr.presentation.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite">

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.gas.humblr.presentation.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_subreddit"
        android:name="ru.gas.humblr.presentation.subreddit.SubredditFragment"
        android:label="SubredditFragment">

        <action
            android:id="@+id/action_navigation_subreddit_to_navigation_subreddit_description"
            app:destination="@id/navigation_subreddit_description" />
        <action
            android:id="@+id/action_navigation_subreddit_to_navigation_subreddit_post"
            app:destination="@id/navigation_subreddit_post" />
    </fragment>
    <fragment
        android:id="@+id/navigation_subreddit_description"
        android:name="ru.gas.humblr.presentation.subreddit_description.SubredditDescriptionFragment"
        android:label="subredditDescriptionFragment"
        tools:layout="@layout/fragment_subreddit_description">

    </fragment>


    <fragment
        android:id="@+id/navigation_subreddit_post"
        android:name="ru.gas.humblr.presentation.subreddit_post.SubredditPostFragment"
        android:label="subredditPostFragment"
        tools:layout="@layout/fragment_subreddit_post"/>

</navigation>