<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    android:orientation="vertical">

    <GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:columnCount="1"
        android:rowCount="5"
        tools:context=".presentation.subreddit_post.SubredditPostFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/back_arrow"
            app:subtitleTextAppearance="@style/Theme.AppCompat.DayNight.DialogWhenLarge"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_subreddit"
                android:textColor="@color/white"
                android:textSize="21sp" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:padding="8dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_margin="6dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="author"
                        android:textColor="@color/secondary"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/created"
                        android:textSize="11sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/titleImg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="7dp"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />


                <TextView
                    android:id="@+id/postTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:padding="6dp"
                    android:text="postTitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/fullPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="6dp"
                    android:ellipsize="end"
                    android:padding="6dp"
                    android:text="Full Post"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:foregroundGravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/upArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="7dp"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/up_arrow" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/downArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/down_arrow" />

                    <TextView
                        android:id="@+id/commentsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/comments"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/saveText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="25dp"
                        android:text="@string/save"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </GridLayout>
</ScrollView>